fixed bugs of blurry animation project

--- a/05 Blurry Loading/style.css
+++ b/05 Blurry Loading/style.css
@@ -21,11 +21,12 @@ body{
     width: calc(100vw + 60px);
     height: calc(100vh + 60px);
     z-index: -1;
-    filter: blur(70px);
+    filter: blur(0px);
      
 }
 
 .loading-text {
     font-size: 50px;
-    color: white;
+    color: rgb(20, 243, 187);
+    font-weight: bolder;
 }
